# ai-doc-translator

./: .gitignore  README_PORTABLE.txt  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows-portable.yml
backend/: backend_server.py  requirements.txt
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
