[package]
name = "ai-doc-translator"
version = "0.1.0"
description = "AI 鏂囨。缈昏瘧鍔╂墜"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
